--- a/osbase/tpm/proto/BUILD.bazel
+++ b/osbase/tpm/proto/BUILD.bazel
@@ -14,7 +14,7 @@ go_proto_library(
     importpath = "source.monogon.dev/osbase/tpm/proto",
     proto = ":proto_proto",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_google_go_tpm_tools//proto/tpm"],  #keep
+    deps = ["@com_github_google_go_tpm_tools//proto/tpm:tpm_go_proto"],  #keep
 )
 
 go_library(
