treewide: fix "could not merge expression" from gazelle
This isn't any real bugfix, but more of a style thing. Gazelle can't work with select or glob statements (bazelbuild/bazel-gazelle#1735), but will work fine with them and even ignore them if set to # keep. This adds that directive to make gazelle less verbose when running.

Change-Id: I7c638867d6b566e1d398eef37aff2316bf90a00f
Reviewed-on: https://review.monogon.dev/c/monogon/+/3241
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/bmaas/bmdb/model/BUILD.bazel
+++ b/cloud/bmaas/bmdb/model/BUILD.bazel
@@ -5,7 +5,7 @@ sqlc_go_library(
     name = "sqlc_model",
     dialect = "cockroachdb",
     importpath = "source.monogon.dev/cloud/bmaas/bmdb/model",
-    migrations = glob(["migrations/*sql"]),
+    migrations = glob(["migrations/*.sql"]),
     queries = [
         "queries_base.sql",
         "queries_stats.sql",
@@ -23,7 +23,7 @@ go_library(
     embed = [
         ":sqlc_model",  # keep
     ],
-    embedsrcs = glob(["migrations/*sql"]),
+    embedsrcs = glob(["migrations/*.sql"]),  # keep
     importpath = "source.monogon.dev/cloud/bmaas/bmdb/model",
     visibility = ["//visibility:public"],
     deps = [
