.bazelrc: fix a typo
Change-Id: I55f4da402c6b418556f5e8dd2a3b643b9a19128b
Reviewed-on: https://review.monogon.dev/c/monogon/+/3247
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/.bazelrc
+++ b/.bazelrc
@@ -11,7 +11,7 @@ common --noincompatible_disallow_empty_glob
 # Don't warn about too high test timeout as these can vary a lot.
 test --notest_verbose_timeout_warnings
 
-# Set compilation mode (-c) to debug when running with --config debug.
+# Set compilation mode (-c) to debug when running with --config dbg.
 build:dbg --compilation_mode=dbg
 
 # Run all spawns in our own hermetic sandbox sysroot.
