osbase/net/dns: add new DNS server
This adds a new DNS server service, which will replace CoreDNS. The
service has built-in handlers for certain names, but all other names
will be handled by runtime configurable handlers.

Change-Id: I4184d11422496e899794ef658ca1450e7bb01471
Reviewed-on: https://review.monogon.dev/c/monogon/+/3126
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/go.MODULE.bazel
+++ b/go.MODULE.bazel
@@ -49,6 +49,7 @@ use_repo(
     "com_github_mdlayher_kobject",
     "com_github_mdlayher_netlink",
     "com_github_mdlayher_packet",
+    "com_github_miekg_dns",
     "com_github_mitchellh_go_wordwrap",
     "com_github_opencontainers_go_digest",
     "com_github_opencontainers_runc",
