--- a/go.MODULE.bazel
+++ b/go.MODULE.bazel
@@ -87,6 +87,7 @@ use_repo(
     "io_k8s_kubelet",
     "io_k8s_kubernetes",
     "io_k8s_pod_security_admission",
+    "io_k8s_utils",
     "net_starlark_go",
     "org_golang_google_genproto_googleapis_api",
     "org_golang_google_grpc",
