WORKSPACE: migrate simple http_archive, http_file and git_repositories to bzlmod
All the others will follow but are more invasive changes.

Change-Id: I12b6983015be89e179d7e61ae25bf98a48b2c468
Reviewed-on: https://review.monogon.dev/c/monogon/+/3282
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -100,3 +100,5 @@ include("//:rust.MODULE.bazel")
 include("//:go.MODULE.bazel")
 
 include("//:oci.MODULE.bazel")
+
+include("//:third_party.MODULE.bazel")
