--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
         "cmd_node.go",
         "cmd_node_approve.go",
         "cmd_node_logs.go",
+        "cmd_node_metrics.go",
         "cmd_node_set.go",
         "cmd_takeownership.go",
         "main.go",
@@ -43,6 +44,7 @@ go_library(
     deps = [
         "//go/clitable",
         "//metropolis/cli/metroctl/core",
+        "//metropolis/node",
         "//metropolis/node/core/identity",
         "//metropolis/node/core/rpc",
         "//metropolis/node/core/rpc/resolver",
@@ -59,6 +61,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
         "@io_k8s_client_go//pkg/apis/clientauthentication/v1:clientauthentication",
         "@org_golang_google_grpc//:grpc",
+        "@org_golang_x_net//proxy",
         "@org_golang_x_sync//semaphore",
     ],
 )
