osbase/supervisor: implement Prometheus metrics
This is a simple implementation of supervisor.Metrics which will be used
in Metropolis.

Change-Id: I8d47b3aa631dec5b07295d5498b3b0d1ad36c0f7
Reviewed-on: https://review.monogon.dev/c/monogon/+/3291
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/osbase/supervisor/BUILD.bazel
+++ b/osbase/supervisor/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "supervisor.go",
         "supervisor_metrics.go",
+        "supervisor_metrics_prometheus.go",
         "supervisor_node.go",
         "supervisor_processor.go",
         "supervisor_support.go",
@@ -16,6 +17,7 @@ go_library(
     deps = [
         "//osbase/logtree",
         "@com_github_cenkalti_backoff_v4//:backoff",
+        "@com_github_prometheus_client_golang//prometheus",
         "@org_golang_google_grpc//:grpc",
     ],
 )
