metropolis/node: export core/supervisor metrics
Change-Id: Ibe3be27f9a5b3fc5e36babecc74d7d784d1f5e10
Reviewed-on: https://review.monogon.dev/c/monogon/+/3292
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/node/core/metrics/BUILD.bazel
+++ b/metropolis/node/core/metrics/BUILD.bazel
@@ -16,6 +16,8 @@ go_library(
         "//metropolis/node/core/curator/watcher",
         "//metropolis/node/core/identity",
         "//osbase/supervisor",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@com_github_prometheus_client_golang//prometheus/promhttp",
     ],
 )
 
