treewide: move //net to //osbase/net
The net package contains the utility to dump a network configuration in
proto format. It should be in osbase.

Change-Id: I4d25d9c7d600f4a04b9b79bd1ba98286bf9daec3
Reviewed-on: https://review.monogon.dev/c/monogon/+/3313
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/agent/BUILD.bazel
+++ b/cloud/agent/BUILD.bazel
@@ -18,12 +18,12 @@ go_library(
         "//cloud/bmaas/server/api",
         "//metropolis/node/core/devmgr",
         "//metropolis/node/core/network",
-        "//net/proto",
         "//osbase/blockdev",
         "//osbase/bootparam",
         "//osbase/build/mkimage/osimage",
         "//osbase/efivarfs",
         "//osbase/logtree",
+        "//osbase/net/proto",
         "//osbase/nvme",
         "//osbase/pki",
         "//osbase/scsi",
