--- a/metropolis/node/core/localstorage/BUILD.bazel
+++ b/metropolis/node/core/localstorage/BUILD.bazel
@@ -18,7 +18,7 @@ go_library(
         "//metropolis/proto/api",
         "//metropolis/proto/common",
         "//metropolis/proto/private",
-        "//net/proto",
+        "//osbase/net/proto",
         "//osbase/tpm",
         "@org_golang_google_protobuf//proto",
         "@org_golang_x_sys//unix",
