--- a/metropolis/node/core/network/BUILD.bazel
+++ b/metropolis/node/core/network/BUILD.bazel
@@ -14,11 +14,11 @@ go_library(
         "//go/algorithm/toposort",
         "//metropolis/node/core/network/dhcp4c",
         "//metropolis/node/core/network/dhcp4c/callback",
-        "//net/proto",
         "//osbase/event/memory",
         "//osbase/logtree",
         "//osbase/net/dns",
         "//osbase/net/dns/forward",
+        "//osbase/net/proto",
         "//osbase/supervisor",
         "//osbase/sysctl",
         "@com_github_google_nftables//:nftables",
