--- a/osbase/net/dump/BUILD.bazel
+++ b/osbase/net/dump/BUILD.bazel
@@ -6,10 +6,10 @@ go_library(
         "hwaddr_compat.go",
         "netdump.go",
     ],
-    importpath = "source.monogon.dev/net/dump",
+    importpath = "source.monogon.dev/osbase/net/dump",
     visibility = ["//visibility:public"],
     deps = [
-        "//net/proto",
+        "//osbase/net/proto",
         "@com_github_vishvananda_netlink//:netlink",
         "@org_golang_x_sys//unix",
     ],
