--- a/osbase/net/proto/BUILD.bazel
+++ b/osbase/net/proto/BUILD.bazel
@@ -10,7 +10,7 @@ proto_library(
 
 go_proto_library(
     name = "net_proto_go_proto",
-    importpath = "source.monogon.dev/net/proto",
+    importpath = "source.monogon.dev/osbase/net/proto",
     proto = ":net_proto_proto",
     visibility = ["//visibility:public"],
 )
@@ -18,6 +18,6 @@ go_proto_library(
 go_library(
     name = "proto",
     embed = [":net_proto_go_proto"],
-    importpath = "source.monogon.dev/net/proto",
+    importpath = "source.monogon.dev/osbase/net/proto",
     visibility = ["//visibility:public"],
 )
