gitignore: add comment for rust/target ignores
Change-Id: I09925dcdf238aa674bf844b63374f27866305982
Reviewed-on: https://review.monogon.dev/c/monogon/+/3314
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@
 .bazeldnf
 .direnv
 
+# Ignore misplaced build output from Intellij's Rust plugin.
 third_party/rust/target/*
 third_party/rust_efi/target/*
