--- a/metropolis/installer/test/BUILD.bazel
+++ b/metropolis/installer/test/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_test")
-load("//metropolis/node/build:efi.bzl", "efi_unified_kernel_image")
+load("//osbase/build:efi.bzl", "efi_unified_kernel_image")
 
 go_test(
     name = "test_test",
@@ -23,8 +23,8 @@ go_test(
     },
     deps = [
         "//metropolis/cli/metroctl/core",
-        "//metropolis/node/build/mkimage/osimage",
         "//metropolis/proto/api",
+        "//osbase/build/mkimage/osimage",
         "//osbase/cmd",
         "@com_github_diskfs_go_diskfs//:go-diskfs",
         "@com_github_diskfs_go_diskfs//disk",
