--- a/metropolis/test/launch/cli/launch-cluster/BUILD.bazel
+++ b/metropolis/test/launch/cli/launch-cluster/BUILD.bazel
@@ -4,14 +4,21 @@ load("@bazel_skylib//rules:native_binary.bzl", "native_test")
 go_library(
     name = "launch-cluster_lib",
     srcs = ["main.go"],
+    data = [
+        "//metropolis/cli/metroctl",
+    ],
     importpath = "source.monogon.dev/metropolis/test/launch/cli/launch-cluster",
     visibility = ["//visibility:private"],
+    x_defs = {
+        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl )",
+    },
     deps = [
         "//metropolis/cli/flagdefs",
         "//metropolis/cli/metroctl/core",
         "//metropolis/node",
         "//metropolis/proto/common",
         "//metropolis/test/launch",
+        "@io_bazel_rules_go//go/runfiles:go_default_library",
     ],
 )
 
